# aiopsx

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt  telemetry.py
.github/workflows/: ci.yml
agents/: decision_agent.py  diagnosis_agent.py  executor_agent.py  monitor_agent.py
api/: server.py
config/: permissions.yaml  settings.py
core/: orchestrator.py
dashboard/: app.py
docs/: api.md  architecture.md
models/: local_llm.py  openai_llm.py  router.py
state/: models.py
tests/: conftest.py  test_api.py  test_config.py  test_decision.py  test_diagnosis.py  test_executor.py  test_models.py  test_monitor.py  test_orchestrator.py  test_tools.py
tools/: docker_tools.py  github_tools.py  network_tools.py  system_tools.py
